Fixed hovers on mobile

--- a/assets/stylesheets/atoms/_speaker.scss
+++ b/assets/stylesheets/atoms/_speaker.scss
@@ -13,25 +13,35 @@
   @include desktop {
     flex-direction: column;
     align-items: flex-start;
-  }
-
-  &:hover, &:active {
-    figure {
-        &:after {
-          @include transition(0.8);
-          opacity: 0.7;
-          background: rgba($purple, 0.6); /* For browsers that do not support gradients */
-          background: -webkit-linear-gradient(left top, rgba($blue, 0.9), rgba($purple, 0.8)); /* For Safari 5.1 to 6.0 */
-          background: -o-linear-gradient(bottom right, rgba($blue, 0.9), rgba($purple, 0.8)); /* For Opera 11.1 to 12.0 */
-          background: -moz-linear-gradient(bottom right, rgba($blue, 0.9), rgba($purple, 0.8)); /* For Firefox 3.6 to 15 */
-          background: linear-gradient(bottom right, rgba($blue, 0.9), rgba($purple, 0.8)); /* Standard syntax */
-
+    &:hover, &:active {
+      figure {
+          &:after {
+            @include transition(0.8);
+            opacity: 0.7;
+            background: rgba($purple, 0.6); /* For browsers that do not support gradients */
+            background: -webkit-linear-gradient(left top, rgba($blue, 0.9), rgba($purple, 0.8)); /* For Safari 5.1 to 6.0 */
+            background: -o-linear-gradient(bottom right, rgba($blue, 0.9), rgba($purple, 0.8)); /* For Opera 11.1 to 12.0 */
+            background: -moz-linear-gradient(bottom right, rgba($blue, 0.9), rgba($purple, 0.8)); /* For Firefox 3.6 to 15 */
+            background: linear-gradient(bottom right, rgba($blue, 0.9), rgba($purple, 0.8)); /* Standard syntax */
+          }
+      }
+      span {
+        @include desktop {
+          @include transition();
+          border: solid rgba($light, 0.6) 1px;
         }
+      }
     }
+  }
+  &:last-child {
     span {
-      @include desktop {
-        @include transition();
-        border: solid rgba($light, 0.6) 1px;
+      display: none;
+    }
+    &:hover, &:active {
+      figure {
+          &:after {
+            opacity: 0.2;
+        }
       }
     }
   }
